infra/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "*.labs.jininfra.cloud"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: http-study
      hostname: "*.study.labs.jininfra.cloud"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: http-root
      hostname: "labs.jininfra.cloud"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
