infra/http-to-https-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: labs-root-http-redirect
  namespace: study
spec:
  hostnames:
    - labs.jininfra.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: knative-ingress-gateway
      namespace: knative-serving
      sectionName: http-root
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-study-http-redirect
  namespace: study
spec:
  hostnames:
    - portal.study.labs.jininfra.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: knative-ingress-gateway
      namespace: knative-serving
      sectionName: http-study
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
